# django-emaillist

./: .gitignore  CONVENTIONS.md  MANIFEST.in  Pipfile  readme.md  setup.cfg
.cursor/rules/: conventions.mdc
django_emaillist/: apps.py  utils.py  views.py
django_emaillist/migrations/: 0002_subscription_is_confirmed_subscription_subscribed_at.py
django_emaillist/templates/emaillist/: subscription_confirmed.html  unsubscribed.html
emaillist/: admin.py  apps.py  models.py  signals.py  urls.py  utils.py  views.py
emaillist/locale/es/LC_MESSAGES/: django.mo  django.po
emaillist/locale/fr/LC_MESSAGES/: django.mo  django.po
emaillist/migrations/: 0001_initial.py
emaillist/templates/emaillist/: resubscribed.html  subscription_error.html
tests/: settings.py  test_utils.py
