[metadata]
name = django-emaillist
version = 0.1
description = A reusable Django app for managing email subscriptions.
long_description=open('readme.md').read(),
url='https://github.com/MiKatre/django-emaillist',
author = Micael de Prado
author_email = micael.deprado@gmail.com
license = "Apache License, Version 2.0"
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 3.2 
    django_ratelimit